--- a/src/locales/locales/vi/translation.json
+++ b/src/locales/locales/vi/translation.json
@@ -9,29 +9,51 @@
     "workCount": "Công",
     "overtime": "Tăng ca",
     "eatBonus": "Hỗ trợ ăn",
+    "Day": "Ngày",
     "day": "Ngày",
+    "Night": "Đêm",
+    "night": "đêm",
     "hour": "giờ",
-    "night": "Đêm",
+    "Hour": "Giờ",
+    "workCalendar": "Lịch làm việc",
+    "weekendWork": "Làm chủ nhật",
+    "dayCount": "Ngày làm",
+    "hourCount": "Giờ làm",
+    "overTimeCount": "Tăng ca",
+    "offDayLeft": "Phép còn",
+    "detail": "Chi tiết",
+
+    "lunarDate": "Âm lịch",
+    "day0": "Chủ nhật",
+    "day1": "Thứ hai",
+    "day2": "Thứ ba",
+    "day3": "Thứ tư",
+    "day4": "Thứ năm",
+    "day5": "Thứ sáu",
+    "day6": "Thứ bảy",
     "sun": "Chủ nhật",
     "fes": "Lễ",
 
     "total": "Tổng",
     "realGet": "Thực lĩnh",
     "deduct": "Khấu trừ",
-    "income": "Thu nhập",
+    "income": "Chi trả",
     "month": "Tháng",
 
     "personal": "Cá nhân",
     "work": "Công việc"
   },
-  "header": {},
+  "header": {
+    "calendar": "Bảng đi làm"
+  },
   "sidebar": {
-    "home": "Trang chủ",
-    "wage": "Bảng lương",
-    "dayOff": "Ngày nghỉ",
+    "home": "T.Chủ",
+    "calendar": "B.Công",
+    "wage": "B.Lương",
+    "dayOff": "Nghỉ",
     "progress": "Tiến độ",
     "notification": "Thông báo",
-    "seft": "Bản thân",
+    "seft": "B.Thân",
     "mail": "Thư từ",
     "approval": "Phê duyệt",
     "plan": "Kế hoạch",
@@ -103,7 +125,7 @@
     "search": "Tra cứu",
     "normal": "Bình thường",
     "overtime": "Tăng ca",
-    "offNoP": "Nghỉ ko phép",
+    "offNoP": "Nghỉ KP",
     "offP": "Nghỉ phép",
     "offhalf": "Nghỉ nửa",
     "comeLate": "Đi muộn",
@@ -113,7 +135,12 @@
     "start": "Bắt đầu",
     "finish": "Kết thúc",
     "otTime": "Tăng ca",
-    "shift": "Ca làm"
+    "shift": "Ca làm",
+    "timeIn": "Giờ đến",
+    "timeOut": "Giờ về",
+    "eatBonus": "Trợ ăn",
+    "off": "Nghỉ",
+    "bonus": "Thưởng"
   },
 
   "selfNotify": {
